[gd_scene load_steps=3 format=3 uid="uid://dj8l7fx26h51g"]

[ext_resource type="Script" uid="uid://d1x5u2u7grlsv" path="res://scenes/achievements/achievement_card.gd" id="1_7c2k7"]

[sub_resource type="CanvasTexture" id="CanvasTexture_70w6n"]

[node name="AchievementCard" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -981.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7c2k7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopRowContainer" type="HBoxContainer" parent="MarginContainer/ContentContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="IconTexture" type="TextureRect" parent="MarginContainer/ContentContainer/TopRowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("CanvasTexture_70w6n")

[node name="InfoVBox" type="VBoxContainer" parent="MarginContainer/ContentContainer/TopRowContainer/IconTexture"]
layout_mode = 1
anchors_preset = -1
offset_left = 100.0
offset_right = 2020.0
offset_bottom = 100.0

[node name="TitleLabel" type="Label" parent="MarginContainer/ContentContainer/TopRowContainer/IconTexture/InfoVBox"]
custom_minimum_size = Vector2(1920, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.74509805, 0.74509805, 0.74509805, 1)
theme_override_font_sizes/font_size = 32
text = "Название Ачивки"

[node name="DescriptionLabel" type="Label" parent="MarginContainer/ContentContainer/TopRowContainer/IconTexture/InfoVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.827451, 0.827451, 0.827451, 1)
theme_override_font_sizes/font_size = 18
text = "Описание ачивки"

[node name="UnlockDateLabel" type="Label" parent="MarginContainer/ContentContainer/TopRowContainer/IconTexture/InfoVBox"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.74509805, 0.74509805, 0.74509805, 1)
theme_override_font_sizes/font_size = 16

[node name="ProgressLabel" type="Label" parent="MarginContainer/ContentContainer/TopRowContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 10
theme_override_colors/font_color = Color(0.7529412, 0.7529412, 0.7529412, 1)
theme_override_font_sizes/font_size = 32
text = "0 / 10"
horizontal_alignment = 2
vertical_alignment = 1
